--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,101 @@
 $primary-color: #444;
+$secondary-color:#eece1a;
+$show-home-image: true;
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
+
+@mixin easeOut {
+    transition: all 0.5s ease-out;
+}
+
+@mixin backgroud{
+    @if $show-home-image{
+        &#bg-img{
+            background: $home-image;
+            background-attachment: fixed;
+            background-size: cover;
+            &:after{
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
+                background-color: rgba($primary-color, $background-opacity);
+            }
+        }
+
+    }
+}
+
+*{
+    box-sizing: border-box;
+}
 
 
 body{
+    @include backgroud;
     background-color: $primary-color ;
+
+    // color: #FFF;
+    height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.5;
+}
+
+
+// Headings
+h1, h2, h3 {
+    margin:0;
+    font-weight: 400;
+    &.lg-heading{
+        font-size: 6rem;
+    }
+
+    &.sm-heading{
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;
+        background-color: rgba(lighten($primary-color, 2), 0.5);
+    }
+}
+
+a{
     color: #FFF;
+    text-decoration: none;
+}
+
+header{
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
+
+
+
+main{
+    padding: 4rem;
+    height: 100%;
+    .icons{
+        margin-top: 1rem;
+        a{
+            padding: 0.4rem;
+            &:hover{
+                color: $secondary-color;
+                @include easeOut();
+            }
+        }
+    }
+
+    &#home{
+        overflow: hidden;
+        h1{
+            margin-top: 20vh;
+            span{
+                color: $secondary-color;
+            }
+        }
+
+        
+    }
 }
