--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,33 +1,7 @@
-$primary-color: #444;
-$secondary-color:#eece1a;
-$show-home-image: true;
-$home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+@import 'variables';
+@import 'mixins';
+@import 'menu';
 
-@mixin easeOut {
-    transition: all 0.5s ease-out;
-}
-
-@mixin backgroud{
-    @if $show-home-image{
-        &#bg-img{
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;
-            &:after{
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                z-index: -1;
-                background-color: rgba($primary-color, $background-opacity);
-            }
-        }
-
-    }
-}
 
 *{
     box-sizing: border-box;
