--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,4 +2,5 @@ $primary-color: #444;
 $secondary-color:#eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
+$portrait-img: url(../img/portrait.jpg);
 $background-opacity: 0.9;
