--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -1,45 +1,41 @@
-
-
+// ************************ media querry mixins ************************* //
 @mixin easeOut {
     transition: all 0.5s ease-out;
 }
 
-@mixin backgroud{
-    @if $show-home-image{
-        &#bg-img{
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;
-            &:after{
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                z-index: -1;
-                background-color: rgba($primary-color, $background-opacity);
-            }
-        }
-
-    }
+@mixin toggle {
+    animation: fadeIn linear 1s infinite;
+    @-webkit-keyframes fadeIn { 
+        0% { opacity: 0.3; }
+        50% { opacity:0.6;   }
+        100% { opacity: 1; }
+      }
+      @keyframes fadeIn {
+        0% { opacity: 0.3; }
+        50% {opacity:0.6}
+        100% { opacity: 0.9; }
+      }
 }
+
 
 @function set-text-color($color){
     @if(lightness($color) > 40){
         @return #000;
     }
     @else{
-        @return #fff
+        @return #fff;
     }
 }
 
 
-//media querry mixins
+
+
+
+// ************************ media querry mixins ************************* //
 
 // will only apply if screen 500px or less
 @mixin mediaSm{
-    @media screen and (max-width:500px){
+    @media screen and (min-width:320px) and (max-width:500px){
         @content;
     }
 }
