contact page added

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,8 @@
 
 @import 'pages/homepage';
 @import 'pages/about';
-@import 'pages/works.scss';
+@import 'pages/works';
+@import 'pages/contact';
 
 @import 'components/buttons';
 @import 'components/headings';
