--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -27,6 +27,10 @@
     &-branding{
         // slide in from bottom
         transform: translate3d(0, 100%, 0);
+        .icons{
+            margin-top: 1rem;
+            a{  padding: 0.4rem; }
+        }
         @include easeOut;
     }
     .prtorait{
@@ -36,6 +40,7 @@
         z-index: 500;
         background: $portrait-img;
         background-size: cover;
+        margin-bottom: 1rem;
         border-radius: 50%;
         img{
             width: 100%;
@@ -120,6 +125,12 @@
         height: 25vh;
         transform: translate3d(100%,0,0);
         font-size: 24px;
+        .icons{
+            display: none;
+        }
+        .sm-heading{
+            display: none;
+        }
     }
     .prtorait{
         max-width: 150px;
