--- a/scss/layout/_theme.scss
+++ b/scss/layout/_theme.scss
@@ -58,11 +58,39 @@
         color: $light-text;
         background-color: rgba(lighten($light-primary, 2), 0.5);
     }
-    &#about, &#works{        
+
+    #contact-main{
+        .button-success {
+            color: white;
+            // border-radius: 4px;
+            // text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+            // background: rgb(28, 184, 65); /* this is a green */
+        }
+        #name, #email, textarea {
+            border: solid 1px lighten($light-secondary, 50);
+        }
+        button{
+            // border: solid 1px $light-secondary;
+            outline: none;
+            border: none;
+            background-color: darken(#e7e1f9, 20);
+            color: white;
+            &:hover{
+                outline: none;
+                background-color: darken(#e7e1f9, 10);
+            }
+        }
+    }
+    &#about, &#works &#contact{        
         background: $cloudy-background;
         background-attachment: fixed;
         background-size: cover; 
         z-index: -1;
+        small{
+            font-size: 14px; 
+            font-weight: 400;
+            color: darken($light-secondary, 30) ;
+        }
         &:after{
             content: ""; // ::before and ::after both require content
             position: fixed;
@@ -155,7 +183,29 @@
         color: $dark-text;
         background-color: rgba(lighten($dark-primary, 2), 0.5);
     }
-    &#about, &#works{   
+    #contact-main{
+        .button-success {
+            color: white;
+            // border-radius: 4px;
+            // text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+            // background: rgb(28, 184, 65); /* this is a green */
+        }
+        #name, #email, textarea {
+            border: solid 1px lighten($dark-secondary, 50);
+        }
+        button{
+            // border: solid 1px $light-secondary;
+            outline: none;
+            border: none;
+            background-color: darken($dark-secondary, 10);
+            color: white;
+            &:hover{
+                outline: none;
+                background-color: lighten($dark-secondary, 10);
+            }
+        }
+    }
+    &#about, &#about &#contact{        
         background: $stary-background;     
         background-attachment: fixed;
         background-size: cover; 
@@ -165,6 +215,11 @@
         }
         .sub-title{
             color: darken($dark-text, 20);
+        }
+        small{
+            font-size: 14px; 
+            font-weight: 400;
+            color: #9a9a9a ;
         }
         &:after{
             content: ""; 
@@ -201,8 +256,6 @@
 
 
 .theme{
-    min-width:320px;
-    margin: 0!important;
     ul {
         padding: 0;
         list-style-type: none;
@@ -220,11 +273,13 @@
     }
     main{
         padding: 5rem 6rem 5rem 5%;
-        min-height: calc(100vh - 60px);
+        min-height: calc(100vh - 130px);
     }
     a{
         text-decoration: none;
     }
+    min-width:320px;
+    margin: 0!important;
     
     @include mediaMd {
         main{
