--- a/scss/components/_headings.scss
+++ b/scss/components/_headings.scss
@@ -5,7 +5,10 @@ h1, h2, h3, p , a, i{
     font-weight: 500;
     &.lg-heading{ font-size: 6em;}
     &.sm-heading{
+        font-size: 1.5em;
         margin-bottom: 1rem;
         padding: 0.2rem 1rem;
     }
 }
+
+
